--- a/Study/MyApplication/app/src/main/res/values/strings.xml
+++ b/Study/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">Quiz Application</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="true_button">True</string>
+    <string name="false_button">False</string>
+    <string name="correct_toast">Correct!</string>
+    <string name="incorrect_toast">Incorrect!</string>
+    <string name="next_button">Next</string>
+    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
+    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
+    <string name="question_americas">The Amazon River is the Longest river in the Americas.</string>
+    <string name="question_asia">LakeBaikal is the world\'s oldest and deepest freshwater lake.</string>
 </resources>
