--- a/Study/MyApplication/app/src/main/res/values/strings.xml
+++ b/Study/MyApplication/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
     <string name="question_americas">The Amazon River is the Longest river in the Americas.</string>
     <string name="question_asia">LakeBaikal is the world\'s oldest and deepest freshwater lake.</string>
+    <string name="prev_button">Prev</string>
 </resources>
