--- a/Study/PhotoGalleryActivity/app/src/main/res/values/strings.xml
+++ b/Study/PhotoGalleryActivity/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
-    <string name="app_name">PhotoGalleryActivity</string>
+    <string name="app_name">PhotoGallery</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="search_hint">Search Flick</string>
+    <string name="search">Search</string>
+    <string name="clear_search">Clear Search</string>
+
 </resources>
